# innate-executable

./: APPSHELL_COMPARISON.md  INTEGRATION.md  README.md  package.json
contents-bnk/: README.md
contents-bnk/setup/git/: convert_to_flashcards.py  flashcard_template.md  flashcards.json  git_and_github_5_minute_guide.md
docs/: cargo-target-sharing.md  markdown-render-research.md  new-tutorial-architecture.md
playground/.cargo/: config.toml
playground/apps/desktop/: Taskfile.yml  next.config.ts  package.json
playground/apps/desktop/docs/: TUTORIAL_AUTHORING.md
playground/apps/desktop/docs/tutorial-examples/: 00-complete-example.mdx  01-source-attribution-example.mdx  README.md
playground/apps/desktop/public/: skills-manifest.json
playground/apps/desktop/public/skills/: 00-complete-example.mdx  01-source-attribution-example.mdx
playground/apps/desktop/scripts/: generate-skills-manifest.mjs
playground/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
playground/apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
playground/apps/desktop/src/app/series/: page.tsx
playground/apps/desktop/src/app/settings/: page.tsx
playground/apps/desktop/src/app/tutorials/: page.tsx
playground/apps/desktop/src/components/layout/: app-shell.tsx  app-sidebar.tsx  menu-bar.tsx
playground/apps/desktop/src/components/tutorial/: shiki-code-block.tsx
playground/apps/desktop/src/lib/: tutorial-scanner.ts
playground/apps/desktop/src/store/: useAppStore.ts
playground/apps/desktop/src/types/: index.ts
scripts/: start.sh
tasks/issues/v1/: ui-bug-fix.md
(+8 files in other folders)
