[package]
name = "innate-playground"
version = "0.1.0"
description = "Innate Playground - AI Agent Learning Desktop App"
authors = ["Innate"]
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["io-util"] }
